# VisGeomBench

./: .gitignore  LICENSE  README.md  paper.md  pyproject.toml  task_creation.md
blog_prep/: AGENTS.md  blog_prompts.json
configs/: convex_hull_curated.toml  convex_hull_dataset.toml  delaunay_dataset.toml  edge_tasks.toml  half_subdivision.toml  half_subdivision_neighbours.toml  preview_dataset.toml  preview_dataset_medium_hard.toml  sample_dataset.toml  shikaku_curated.toml  shikaku_dataset.toml  topology_edge_classify_curated.toml  topology_edge_enumerate_curated.toml  topology_enumeration_curated.toml  two_segments.toml  two_segments_curated.toml
scripts/: demo_two_segment_variants.py  fetch_shikaku_puzzles.py  generate_dataset.py  generate_topology_enumeration_figures.py  plot_n2_topology_cases.py  random_half_subdivision_demo.py  refresh_blog_assets.py  render_all_model_visuals.py  render_eval_visuals.py  render_ground_truth.py  render_half_subdivision_views.py  render_model_answers.py  render_spotcheck_visuals.py  render_two_segments_dataset.py  update_blog_prompts.py  update_latest_runs.py  visualise.py  visualize_3d_prompt.py
shikaku_generator/: build_rectangles_json.py  render_rectangles.py
tests/: __init__.py  test_visualisations.py
tmp_shikaku/: build_rectangles_json.py  rect  render_rectangles.py
visual_geometry_bench/: dataset.py  registry.py
visualisations/: __init__.py  geometry.py  half_subdivision.py  render.py  shikaku.py  styles.py  topology.py  topology_common.py  topology_edge.py  topology_enumeration.py  two_segments.py
(+74 files in other folders)
