[project]
name = "visual_geometry_bench"
version = "0.1.0"
description = "Visual geometry evaluation benchmark"
requires-python = ">=3.11,<3.13"
dependencies = [
    "numpy>=2.1.0,<2.4.0",
    "scipy>=1.11.0,<1.17.0",
    "shapely>=2.1.2",
    "verifiers>=0.1.0",
    "treelib>=1.8.0",
]

[dependency-groups]
dev = [
    "matplotlib>=3.8.0,<4.0.0",
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

